# fsn

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  fsn.c  fsn_original_backup.c  run.sh
.beads/: issues.jsonl
analysis/: FUN_00412604.annotated.asm  FUN_00412994.annotated.asm  FUN_00419418.annotated.asm  FUN_0041a63c.annotated.asm  FUN_0041a8fc.annotated.asm  FUN_0041a9f8.annotated.asm  FUN_00421940.annotated.asm  FUN_00422f58.ANALYSIS.md  FUN_00422f58.annotated.asm  FUN_00422f58.asm  FUN_00425100.annotated.asm  RENDERING_FUNCTIONS.md  analyze_modules.py  annotate_call_tree.py  apply_renames.py  baddata_analyze.py  batch_disassemble.py  cleanup_src.py  count_function_calls.py  count_global_usage.py  disassemble_function.py  draw_directories.annotated.asm  draw_scene.ANALYSIS.md  draw_scene.annotated.asm  draw_special.annotated.asm  draw_warp_directory.ANALYSIS.md  draw_warp_directory.annotated.asm  explode_fsn.py  extract_call_signatures.py  extract_font.py  extract_from_fresh.py  extract_functions.py  extract_globals.py  extract_module.py  extract_module_ts.py  extract_sgi_gl.py  extract_structs.py  find_clean_functions.py  fix_widget_types.py  function_call_counts.txt  (+21 more)
analysis/render_call_tree/: CALL_TREE_SUMMARY.txt  FUNCTION_NAMES.md  FUN_0040bbe0.annotated.asm  FUN_0040bc28.annotated.asm  FUN_0040bfa0.annotated.asm  FUN_0040ca58.annotated.asm  FUN_0040d804.annotated.asm  call_tree.json  (+24 more)
docs/: DECOMPILATION_PROCEDURE.md  FSN_ARCHAEOLOGY.md  TODO_STUBS.md  draw_directories.ANALYSIS.md
fsn.c.exploded/: AddServer__6ClientFliT2.c  CreateSelectionEntries.c  CreateSelectionMenus.c  DoClientIn__6ClientFP11ServerEntry.c  FAMCancelMonitor.c  FAMClose.c  FAMDebugLevel.c  FAMMonitorCollection.c  FAMMonitorDirectory.c  FAMMonitorDirectory2.c  FAMMonitorFile.c  FAMMonitorFile2.c  FAMMonitor__FP13FAMConnectionPcP10FAMRequestPvi.c  FAMNextEvent.c  FAMOpen.c  FAMOpen2.c  FAMPending.c  FAMResumeMonitor.c  FAMSuspendMonitor.c  FindIconByName__14ByteCodeLoaderFPc.c  FindIconByType__14ByteCodeLoaderFPc.c  FindInfoByName__14ByteCodeLoaderFPc.c  FindInfoByType__14ByteCodeLoaderFPc.c  GLXwinset.c  GlobMatch__FPcT1.c  GlxCreateMDraw.c  INDEX.md  LoadFileTypingRules__14ByteCodeLoaderFPc.c  LoadIntlResources.c  ReadFromServer__6ClientFiPcT1.c  SG_defaultDepthAndTypeResources.c  SG_getDefaultColormap.c  SG_getDefaultDepth.c  SG_getMatchingVisual.c  SG_getMaxDepth.c  SG_getNormalArgs.c  SG_getOverlay2Args.c  SG_getOverlay4Args.c  SG_getOverlayArgs.c  SG_getPopupArgs.c  (+704 more)
fsn_original.exploded/: FAMCancelMonitor.c  FAMMonitorDirectory2.c  FAMMonitorFile.c  FAMMonitor__FP13FAMConnectionPcP10FAMRequestPvi.c  FAMOpen2.c  FAMPending.c  FAMResumeMonitor.c  FAMSuspendMonitor.c  FUN_0040a704.c  FUN_0040ae2c.c  FUN_0040bc28.c  FUN_0040bc64.c  FUN_0040bdb4.c  FUN_0040bfa0.c  FUN_0040bfec.c  FUN_0040c0cc.c  FUN_0040cf50.c  FUN_0040cf9c.c  FUN_0040d804.c  FUN_0040d9a8.c  FUN_0040da14.c  FUN_0040da94.c  FUN_0040de38.c  FUN_0040df80.c  FUN_0040eff8.c  FUN_0040f080.c  FUN_0040f1f0.c  FUN_0040f20c.c  FUN_0040f7c8.c  FUN_0040f960.c  FUN_0040fbb0.c  FUN_00410088.c  FUN_004101e4.c  FUN_00410644.c  FUN_0041069c.c  FUN_00410858.c  FUN_00410e7c.c  FUN_00410f30.c  FUN_00410f74.c  FUN_00411114.c  (+655 more)
fsn_original.exploded.cleanup/: AddServer__6ClientFliT2.c  CreateSelectionEntries.c  CreateSelectionMenus.c  DoClientIn__6ClientFP11ServerEntry.c  FAMClose.c  FAMDebugLevel.c  FAMMonitorCollection.c  FAMMonitorDirectory.c  FAMMonitorFile2.c  FAMNextEvent.c  FAMOpen.c  FUN_0040a7ec.c  FUN_0040bc28.c  FUN_0040bce8.c  FUN_0040bfa0.c  FUN_0040bfec.c  FUN_0040c0cc.c  FUN_0040c1a0.c  FUN_0040cf50.c  FUN_0040cf9c.c  FUN_0040d15c.c  FUN_0040d2cc.c  FUN_0040d3cc.c  FUN_0040d804.c  FUN_0040dee0.c  FUN_0040dff8.c  FUN_0040ed40.c  FUN_0040ef44.c  FUN_0040f150.c  FUN_0040f36c.c  FUN_0040f42c.c  FUN_0040f668.c  FUN_0040fae8.c  FUN_00410088.c  FUN_004101e4.c  FUN_004108ec.c  FUN_00410b7c.c  FUN_00410e7c.c  FUN_00410f74.c  FUN_00411578.c  (+669 more)
fsn_original.exploded.v2/: AddServer__6ClientFliT2.c  CLEANUP_REPORT.md  CreateSelectionEntries.c  CreateSelectionMenus.c  DoClientIn__6ClientFP11ServerEntry.c  FAMCancelMonitor.c  FAMClose.c  FAMDebugLevel.c  FAMMonitorCollection.c  FAMMonitorDirectory.c  FAMMonitorDirectory2.c  FAMMonitorFile.c  FAMMonitorFile2.c  FAMMonitor__FP13FAMConnectionPcP10FAMRequestPvi.c  FAMNextEvent.c  FAMOpen.c  FAMOpen2.c  FAMPending.c  FAMResumeMonitor.c  FAMSuspendMonitor.c  FUN_0040a704.c  FUN_0040a7ec.c  FUN_0040ae2c.c  FUN_0040aec8.c  FUN_0040bc28.c  FUN_0040bc64.c  FUN_0040bce8.c  FUN_0040bdb4.c  FUN_0040bfa0.c  FUN_0040bfec.c  FUN_0040c0cc.c  FUN_0040c1a0.c  FUN_0040cf50.c  FUN_0040cf9c.c  FUN_0040d15c.c  FUN_0040d2cc.c  FUN_0040d3cc.c  FUN_0040d804.c  FUN_0040d9a8.c  FUN_0040da14.c  (+895 more)
include/: block_render.h  box_geometry.h  buffer.h  bytecode.h  calc.h  checks.h  cicon.h  clipboard.h  color.h  colormap.h  colors.h  context.h  context_funcs.h  convert.h  database.h  database_io.h  datastructures.h  delete.h  dir_core.h  directory.h  display.h  draw_tree.h  drawing.h  drawing_original.h  dump.h  edit.h  events.h  fam.h  fam_monitor.h  file_core.h  file_ops.h  filesystem.h  finalize.h  fsn.h  fsn_context.h  fsn_dir.h  fsn_forward.h  fsn_gl.h  fsn_igl.h  fsn_motif.h  (+66 more)
resources/: Fsn
src/: block_render.c  box_geometry.c  buffer.c  bytecode.c  calc.c  checks.c  cicon.c  clipboard.c  color.c  colormap.c  colors.c  context.c  context_funcs.c  convert.c  database.c  database_io.c  datastructures.c  delete.c  dir_core.c  dir_simple.c  directory.c  display.c  draw_tree.c  drawing.c  dump.c  edit.c  events.c  fam.c  fam_monitor.c  file_core.c  file_ops.c  filesystem.c  finalize.c  fsn_igl.c  fsn_state.c  geometry.c  gl_utils.c  graphics_gl.c  help.c  highlight.c  (+64 more)
src_old/: datastructures.c  filesystem.c  graphics_gl.c  main.c  navigation.c  test_headers.c  ui_motif.c  utility.c
tests/: runner_test_draw_child  runner_test_draw_directories  test_context_layout  test_context_layout.c  test_draw_child.c  test_draw_directories.c
tools/: extract_function.py  group_errors_by_function.py  mock_fsn_igl.c  run_gfx_test.sh
(+1862 files in other folders)
